# Zephyr_Project_F7

./: CMakeLists.txt  app.overlay  prj.conf
drivers/: CMakeLists.txt
drivers/button_driver/: CMakeLists.txt
drivers/gpio_driver/: CMakeLists.txt  gpio_driver.c  gpio_driver.h
gui/: ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
gui/screens/: ui_Screen1.c
src/: main.c
